fix prompt